# todo_webapp_speckit

./: .dockerignore  .gitignore  pyproject.toml  temp_backend_deployment.yaml  user_clarification_questions.md  user_confirmation_request.md  user_prompt.txt  user_report.txt
.gemini/.agents/: cloud_architect_agent.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
backend/: .dockerignore  .dockerignore.bak  Dockerfile  Dockerfile.bak  Dockerfile.debug  GEMINI.md  README.md  compose.yaml  main.py  pyproject.toml
backend/src/: database.py  main.py  mcp_server.py  tools.py
backend/src/api/: auth.py  chat.py  tasks.py
backend/src/dependencies/: auth.py
backend/src/models/: chat.py  task.py  user.py
backend/src/services/: auth.py  tasks.py
frontend/: .dockerignore.bak  .npmignore  Dockerfile  GEMINI.md  README.md  compose.yaml  package-lock.json  package.json
helm/todo-app/: Chart.yaml  values.yaml
helm/todo-chatbot-chart/: Chart.yaml  values.yaml
history/adr/: 001-core-todo-application-architecture.md
k8s/kafka/: cluster.yaml  topic.yaml
plans/: phase4_execution.md
specs/001-core-todo-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ui-auth-redesign/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ai-chatbot-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-k8s-aiops-deployment/: plan.md  spec.md  tasks.md
specs/main/: research.md  (+1 more)
worker/: pyproject.toml
worker/src/: main.py
(+105 files in other folders)
